--- a/render.yaml
+++ b/render.yaml
@@ -7,4 +7,6 @@ services:
     envVars:
       - key: RAILS_ENV
         value: production
-    postDeployCommand: bundle exec rails db:migrate
+    postDeployCommand: |
+      bundle exec rails db:migrate && \
+      bundle exec rails fetch:playgrounds
