[deploy] Add playgrounds:fetch_tokyo task to Render post-deploy command

--- a/render.yaml
+++ b/render.yaml
@@ -8,5 +8,6 @@ services:
       - key: RAILS_ENV
         value: production
     postDeployCommand: |
-      bundle exec rails db:migrate && \
-      bundle exec rails fetch:playgrounds
+      bundle exec rails db:migrate &&
+      bundle exec rails playgrounds:fetch_tokyo RAILS_ENV=production &&
+      bundle exec rails db:seed RAILS_ENV=production
