--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,11 @@
-services:
-  - type: web
-    name: happy-tale
-    env: ruby
-    buildCommand: bundle install && bundle exec rake assets:precompile
-    startCommand: bundle exec puma -C config/puma.rb
-    envVars:
-      - key: RAILS_ENV
-        value: production
-    postDeployCommand: |
-      bundle exec rails db:migrate &&
-      bundle exec rails db:seed RAILS_ENV=production
+type: web
+  name: happy-tale
+  env: ruby
+  buildCommand: bundle install && bundle exec rake assets:clobber && bundle exec rake assets:precompile
+  startCommand: bundle exec puma -C config/puma.rb
+  envVars:
+key: RAILS_ENV
+    value: production
+postDeployCommand: |
+  bundle exec rails db:migrate &&
+  bundle exec rails db:seed RAILS_ENV=production
